[Win][Uniscribe] Material icons containing underscore or numbers aren't shown because ScriptItemize splits them apart https://bugs.webkit.org/show_bug.cgi?id=201214

Reviewed by Don Olmstead.

Source/WebCore:

ScriptItemize split "3d_rotation" into "3", "d", "_" and
"rotation". It has a option fMergeNeutralItems to control it.

Test: fonts/ligature.html

* platform/graphics/win/ComplexTextControllerUniscribe.cpp:
(WebCore::ComplexTextController::collectComplexTextRunsForCharacters):
Set fMergeNeutralItems of SCRIPT_CONTROL true.

LayoutTests:

* fonts/ligature-expected.html: Added.
* fonts/ligature.html: Added.
* fonts/ligature.woff: Added. Created a font for testing ligature
containing only 0-9, underscore, 'a' and U+E000 glyphs. U+E000 has
a ligature string "0_a".


Canonical link: https://commits.webkit.org/227463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264722 268f45cc-cd09-0410-ab3c-d52691b4dbfc